# haskell-scratch

./: .gitignore  README.md  files.hs  life.lhs  parser.lhs  stack.yaml
addition/: addition.cabal
addition/src/: Addition.hs
hangman/: hangman.cabal
hangman/src/: Main.hs
json-scratch/: README.md  json-scratch.cabal
json-scratch/src/: Book.hs  Library.hs  Main.hs  library.json
